--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="eduford_img/logo.png" alt=""></a>
+            <a href="index.html"><img src="eduford_img/logo-skindive.png" alt=""></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
                 <ul>
-                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/easy%20tutorials/index.html">HOME</a></li>
+                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/portfolio1/index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -37,14 +37,14 @@
 <section class="about-us">
     <div class="row">
         <div class="about-col">
-            <h1>We Are The World's Largest University</h1>
+            <h1>We Are The State's Best Diving Training</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, dolor cupiditate mollitia quidem, ducimus repellat asperiores doloremque quod corrupti quos voluptas cum minus blanditiis possimus fuga deserunt quia ipsa nesciunt.
             </p>
             <a href="#" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
-            <img src="eduford_img/about.jpg">
+            <img src="eduford_img/d4.jpg">
         </div>
     </div>
 </section>
