--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 </head>
 <body>
-    <section class="header">
+    <section class="header"> 
         <nav>
-            <a href="index.html"><img src="eduford_img/logo.png" alt=""></a>
+            <a href="index.html"><img src="eduford_img/logo-skindive.png" alt=""></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
@@ -30,8 +30,8 @@
         </nav>
 
 <div class="text-box">
-    <h1>World's Biggest University</h1>
-    <p>Making Website is now one of the easiest thing in the World. You just need to learn HTML, CSS, <br>JavaScript and you are good to go.
+    <h1>See The Beauty Of The<br> Underwater World</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit <br>tellus, luctus nec ullamcorper mattis.
     </p>
 
     <a href="#" class="hero-btn">Visit Us To Know More!</a>
@@ -40,52 +40,52 @@
 
 </section>
 
-<!------------------ Course ------------------>
+<!------------------ Services ------------------>
 
 <section class="course">
-    <h1> Courses We Offer</h1>
+    <h1> Services We Offer</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
     <div class="row">
         <div class="course-col">
-            <h3>Intermediate</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora exercitationem provident adipisci magnam alias architecto nesciunt, ipsam nihil.</p>
+            <h3>Snorkeling Dive</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
         <div class="course-col">
-            <h3>Degree</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam saepe corrupti delectus nihil iusto, repudiandae totam nulla tempore vero quaerat vitae voluptatum eaque ut. Dolorum cupiditate modi corporis labore eligendi.</p>
+            <h3>Free Diving</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
         <div class="course-col">
-            <h3>Post Graduation</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas rem distinctio totam enim iste placeat corrupti, sapiente praesentium eum, libero amet perferendis numquam id iusto. Temporibus, natus! Ut, amet nemo!</p>
+            <h3>Scuba Diving</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
     </div>
 
 </section>
 
-<!------------------ Campus ------------------>
+<!------------------ Beaches ------------------>
 
 <section class="campus">
-    <h1> Our Global Campus</h1>
+    <h1>Discover The Underwater<br> World Around You</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero voluptas ex voluptatibus animi porro, et repudiandae, magnam vel omnis quidem aliquid autem velit dolorem cumque voluptates doloribus deserunt. Eum, labore!</p>
 
     <div class="row">
         <div class="campus-col">
-            <img src="eduford_img/london.png">
+            <img src="eduford_img/portodegalinhas.jpg">
             <div class="layer">
-                <h3>London</h3>
+                <h3>Porto De Galinhas</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="eduford_img/newyork.png">
+            <img src="eduford_img/fernando.jpg">
             <div class="layer">
-                <h3>New York</h3>
+                <h3>Fernando De Noronha</h3>
             </div>
         </div>
         <div class="campus-col">
-            <img src="eduford_img/washington.png">
+            <img src="eduford_img/joaopessoa.jpg">
             <div class="layer">
-                <h3>Washington</h3>
+                <h3>João Pessoa</h3>
             </div>
         </div>
     </div>
@@ -99,18 +99,18 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="eduford_img/library.png">
-            <h3>World Class Library</h3>
+            <img src="eduford_img/d1.jpg">
+            <h3>More Quality Holidays</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
         <div class="facilities-col">
-            <img src="eduford_img/basketball.png">
-            <h3>Largest Playground</h3>
+            <img src="eduford_img/d2.jpg">
+            <h3>Come Practice With Us</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
         <div class="facilities-col">
-            <img src="eduford_img/cafeteria.png">
-            <h3>Tasty And Healthy Food</h3>
+            <img src="eduford_img/d4.jpg">
+            <h3>Scuba Diving Is Cool</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
     </div>
@@ -120,7 +120,7 @@
 <!------------------ Testimonials ----------------->
 
 <section class="testimonials">
-    <h1>What Our Students Says</h1>
+    <h1>What Our Customers Say</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, fuga impedit. Optio eaque sint debitis placeat sunt, repudiandae eligendi iste blanditiis eveniet fugit non ullam odit sed nobis ratione vitae!</p>
 
     <div class="row">
@@ -158,7 +158,7 @@
 <!------------------ Call To Action ----------------->
 
 <section class="cta">
-    <h1>Enroll for our various online courses <br>Anywhere from The World</h1>
+    <h1>Enroll for our classes <br>Anywhere from The World</h1>
     <a href="#" class="hero-btn">CONTACT US</a>
 </section>
 
