--- a/services.html
+++ b/services.html
@@ -15,41 +15,41 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="eduford_img/logo.png" alt=""></a>
+            <a href="index.html"><img src="eduford_img/logo-skindive.png" alt=""></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
                 <ul>
-                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/easy%20tutorials/index.html">HOME</a></li>
+                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/portfolio1/index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="course.html">SERVICES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showmenu()"></i>
         </nav>
-        <h1>Our Courses</h1>
+        <h1>Our Services</h1>
 
 </section>
 
 <!------------------ Course ------------------>
 
 <section class="course">
-    <h1> Courses We Offer</h1>
+    <h1> Services We Offer</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
     <div class="row">
         <div class="course-col">
-            <h3>Intermediate</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora exercitationem provident adipisci magnam alias architecto nesciunt, ipsam nihil.</p>
+            <h3>Snorkeling Dive</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
         <div class="course-col">
-            <h3>Degree</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam saepe corrupti delectus nihil iusto, repudiandae totam nulla tempore vero quaerat vitae voluptatum eaque ut. Dolorum cupiditate modi corporis labore eligendi.</p>
+            <h3>Free Diving</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
         <div class="course-col">
-            <h3>Post Graduation</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas rem distinctio totam enim iste placeat corrupti, sapiente praesentium eum, libero amet perferendis numquam id iusto. Temporibus, natus! Ut, amet nemo!</p>
+            <h3>Scuba Diving</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate neque iste, repellat laudantium omnis quae nam a recusandae, facilis dicta tempora.</p>
         </div>
     </div>
 
@@ -63,18 +63,18 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="eduford_img/library.png">
-            <h3>World Class Library</h3>
+            <img src="eduford_img/d1.jpg">
+            <h3>More Quality Holidays</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
         <div class="facilities-col">
-            <img src="eduford_img/basketball.png">
-            <h3>Largest Playground</h3>
+            <img src="eduford_img/d2.jpg">
+            <h3>Come Practice With Us</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
         <div class="facilities-col">
-            <img src="eduford_img/cafeteria.png">
-            <h3>Tasty And Healthy Food</h3>
+            <img src="eduford_img/d4.jpg">
+            <h3>Scuba Diving Is Cool</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
     </div>
