--- a/blog.html
+++ b/blog.html
@@ -15,20 +15,20 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="eduford_img/logo.png" alt=""></a>
+            <a href="index.html"><img src="eduford_img/logo-skindive.png" alt=""></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
                 <ul>
-                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/easy%20tutorials/index.html">HOME</a></li>
+                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/portfolio1/index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showmenu()"></i>
         </nav>
-        <h1>Our Certificate & Online Programs For 2021</h1>
+        <h1>Discover The Underwater <br>World Around You</h1>
 
 </section>
 
@@ -37,8 +37,8 @@
 <section class="blog-content">
     <div class="row">
         <div class="blog-left">
-            <img src="eduford_img/certificate.jpg">
-            <h2>Our Certificate & Online Programs For 2021</h2>
+            <img src="eduford_img/d2.jpg">
+            <h2>Discover The Underwater World Around You</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nostrum qui, adipisci dolore dignissimos iusto, nisi in culpa voluptate facilis, neque cupiditate suscipit quae. Natus voluptatem eveniet repellendus dolores iusto?
             </p>
@@ -70,31 +70,31 @@
         <div class="blog-right">
             <h3>Post Categories</h3>
             <div>
-                <span>Business Analytics</span>
+                <span>enim ipsam voluptatem</span>
                 <span>21</span>
             </div>
             <div>
-                <span>Data Science</span>
+                <span>enim ipsam voluptatem</span>
                 <span>28</span>
             </div>
             <div>
-                <span>Machine Learning</span>
+                <span>enim ipsam voluptatem</span>
                 <span>15</span>
             </div>
             <div>
-                <span>Computer Science</span>
+                <span>enim ipsam voluptatem</span>
                 <span>34</span>
             </div>
             <div>
-                <span>AutoCAD</span>
+                <span>enim ipsam voluptatem</span>
                 <span>42</span>
             </div>
             <div>
-                <span>Journalism</span>
+                <span>enim ipsam voluptatem</span>
                 <span>22</span>
             </div>
             <div>
-                <span>Commerce</span>
+                <span>enim ipsam voluptatem</span>
                 <span>30</span>
             </div>
         </div>
