--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="eduford_img/logo.png" alt=""></a>
+            <a href="index.html"><img src="eduford_img/logo-skindive.png" alt=""></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
                 <ul>
-                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/easy%20tutorials/index.html">HOME</a></li>
+                    <li><a href="file:///C:/Users/Leticia%20Lima/OneDrive/Documentos/Estudos/portfolio1/index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
                     <li><a href="blog.html">BLOG</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
